
* Zombie spawning rates are randomized for each level.
* Smell and smoke are more realistic - walls act as barriers
* Fixed a bug for choosing zombies' direction to move
* Balancing rates

* Added wind (with a UI wind indicator).
* Smoke blocks vision (both, player's and zombies')
* Smoke is dynamic (smoke clouds are moving).
* Item generation rates.
* Reduced sound perception rates.